// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flowtip content align should align \`center\` 1`] = `
"
  ideal
  bottom

b  ┌┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┐
b  ┆                                       ┆
b  ┆                                       ┆
b  ┆                                       ┆
b  ┆                                       ┆
b  ┆                ┏━━━┓                  ┆
b  ┆                ┃   ┃                  ┆
b  ┆                ┗━━━┛                  ┆
b  ┆                                       ┆
b  ┆             ┌────┸────┐               ┆
b  ┆             │         │               ┆
b  ┆             │         │               ┆
b  ┆             └─────────┘               ┆
b  ┆                                       ┆
b  ┆                                       ┆
b  ┆                                       ┆
b  ┆                                       ┆
b  ┆                                       ┆
b  ┆                                       ┆
b  ┆                                       ┆
b  └┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┘
  "
`;

exports[`flowtip content align should align \`end\` 1`] = `
"
  ideal
  bottom

b  ┌┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┐
b  ┆                                       ┆
b  ┆                                       ┆
b  ┆                                       ┆
b  ┆                                       ┆
b  ┆                ┏━━━┓                  ┆
b  ┆                ┃   ┃                  ┆
b  ┆                ┗━━━┛                  ┆
b  ┆                                       ┆
b  ┆          ┌───────┸─┐                  ┆
b  ┆          │         │                  ┆
b  ┆          │         │                  ┆
b  ┆          └─────────┘                  ┆
b  ┆                                       ┆
b  ┆                                       ┆
b  ┆                                       ┆
b  ┆                                       ┆
b  ┆                                       ┆
b  ┆                                       ┆
b  ┆                                       ┆
b  └┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┘
  "
`;

exports[`flowtip content align should align \`start\` 1`] = `
"
  ideal
  bottom

b  ┌┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┐
b  ┆                                       ┆
b  ┆                                       ┆
b  ┆                                       ┆
b  ┆                                       ┆
b  ┆                ┏━━━┓                  ┆
b  ┆                ┃   ┃                  ┆
b  ┆                ┗━━━┛                  ┆
b  ┆                                       ┆
b  ┆                ┌─┸───────┐            ┆
b  ┆                │         │            ┆
b  ┆                │         │            ┆
b  ┆                └─────────┘            ┆
b  ┆                                       ┆
b  ┆                                       ┆
b  ┆                                       ┆
b  ┆                                       ┆
b  ┆                                       ┆
b  ┆                                       ┆
b  ┆                                       ┆
b  └┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┘
  "
`;
